fix: Corrected method to retrieve user ID from placeOrderDTOS in CheckOutServiceImpl